--- a/Part3_LDA.ipynb
+++ b/Part3_LDA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1aOd5lXvIcAH+NvjsKCsh",
+      "authorship_tag": "ABX9TyOmF0ypNsn/UWRyaW7Zt+UO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,6 +128,44 @@
         "!pip install stylecloud\n",
         "import nltk\n",
         "nltk.download('stopwords')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install -U Kaleido"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g8KStYBlMYf4",
+        "outputId": "792ca413-f3c1-4e9f-e319-7c883b4319c5"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning:\n",
+            "\n",
+            "`should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting Kaleido\n",
+            "  Downloading kaleido-0.2.1-py2.py3-none-manylinux1_x86_64.whl (79.9 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.9/79.9 MB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: Kaleido\n",
+            "Successfully installed Kaleido-0.2.1\n"
+          ]
+        }
       ]
     },
     {
